Fix alignment of licensing fields in publish form

--- a/em/skin/theme_resources/stylesheets/foundation.css
+++ b/em/skin/theme_resources/stylesheets/foundation.css
@@ -1473,8 +1473,7 @@ body.template-author h2 {
     min-height: 150px;
 }
 
-/* ----------------------------------------- Video Upload Form
------------------------------------------ */
+/*  Video Upload Form */
 
 .template-publish_video #mid-container .documentFirstHeading {
   padding: 16px 12px;
@@ -1524,7 +1523,6 @@ body.template-author h2 {
   display: block;
   overflow: auto;
   border: none;
-  
   background: #C9CCD1;
   border-bottom: 1px solid #bfbfbf;
   -moz-border-radius: 0;
@@ -1569,6 +1567,21 @@ body.template-author h2 {
   -moz-border-radius: 0;
   -webkit-border-radius: 0;
   border-radius: 0;
+}
+
+.template-publish_video fieldset#fieldset-contentlicensing legend {
+    font-size: 100%;
+    font-weight: bold;
+}
+
+.template-publish_video fieldset#fieldset-contentlicensing input {
+    margin-right: 0.5em;
+}
+
+.template-publish_video fieldset#fieldset-contentlicensing img {
+    margin-left: -1.8em;
+    vertical-align: middle;
+    margin-right: 1em;
 }
 
 /* Inputs */
@@ -1809,7 +1822,7 @@ a#form-help {
 
 div#categorize-text-container {
     bottom: 290px;
-    left: 500px;
+    left: 185px;
     position: relative;
     width: 500px;
 }
